--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hola mmundo</h1>
-    <h2>hola mmundo</h2>
-    <h3>hola mmundo</h3>
+    <form>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <div class="form-group form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+
+      </form>
 </body>
 </html>
