--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 </head>
 <body>
+  <script> alert("escriba tus credenciales")</script>
+  
     <form> 
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
@@ -23,7 +25,9 @@
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
+      
 
       </form>
+      
 </body>
 </html>
